# sample-engine

./: .gitignore  Cargo.toml  README.md
gl-wrap-core/: Cargo.toml
gl-wrap-core/src/: component.rs  ecs.rs  entity.rs  lib.rs  mesh.rs  scriptable.rs  scripting.rs  shader.rs  texture.rs  types.rs
sample-core/: Cargo.toml
sample-core/src/: assets.rs  component.rs  error.rs  instance.rs  lib.rs  mesh.rs  model.rs  texture.rs
shaders/: fragment.glsl  vertex.glsl
src/: main.rs  scripts-template.rs
