[package]
name = "gl-wrap-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glam = "*"
itertools = "0.10.1"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["image"]
