[package]
name = "gl-wrap-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glam = "*"
itertools = "0.10.1"
image = "0.23.14"

[dependencies.gltf]
version = "0.16"
features = ["extras", "names"]

[dependencies.sdl2]
version = "0.34"
default-features = false
